--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
-  "name": "liamkande.com",
+  "name": "web",
   "version": "0.0.1",
-  "description": "This is my website with all the latest projects and skills sets I've aquired so far!",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "Project for Building an Interface with React.",
   "repository": {
     "type": "git",
-    "url": ".?"
+    "url": "https://github.com/liamkande/liamKande.git"
   },
-  "author": "Ansoumane Liam Kande",
-  "license": "MIT",
+  "author": "Liam Ansoumane Kande",
   "devDependencies": {
     "create-react-class": "^15.6.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-if": "^2.0.2",
-    "gulp-jsonminify": "^1.0.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-minify-html": "^1.0.6",
     "gulp-react": "^3.1.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "gulp-webserver": "^0.9.1",
-    "jshint-stylish": "^2.2.1",
+    "gulp-webserver": "^0.8.8",
+    "jshint-stylish": "^1.0.2",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
